<?xml version="1.0"?>
<package format="2">
  <name>homework_1</name>
  <version>0.0.1</version>
  <description>Counter node example</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
</package>